tests/codegen/fail/object/attr_fields_duplicate.stderr
error: GraphQL object must have a different name for each field
       · note: https://spec.graphql.org/October2021#sec-Objects
 --> fail/object/attr_fields_duplicate.rs:6:6
  |
6 | impl ObjA {
  |      ^^^^
